--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.47
+@version     1.0.48
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -211,10 +211,11 @@ domain("wikifunctions.org") {
       display: flex;
     }
   }
-  /* Move button for ToC-collapsed down */
+  /* Move button for ToC-collapsed down below the sticky-header */
   .vector-below-page-title #vector-toc-collapsed-button {
-    top: 45px;
+    top: 50px;
   }
+
   
   /* Force ToC at smaller width         -- BROKEN
   @media screen and (min-width: 720px) {
