--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.48
+@version     1.0.49
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -191,7 +191,7 @@ domain("wikifunctions.org") {
     visibility: hidden;
   }
   .sidebar-toc {
-    padding-left: 5px !important; /* This overrides my Whitespace.user.css */ 
+    padding-left: 5px !important; 
   }
   /* Bold the H1s */
   .sidebar-toc-level-1 {
@@ -203,6 +203,16 @@ domain("wikifunctions.org") {
   /* Smaller "Contents" */
   .sidebar-toc-title {
   font-size: 12px !important;
+  }
+  /* Remove background */
+  @media screen and (min-width: 1000px) {
+    .sidebar-toc {
+      background: none;
+      border: 1px lightgray solid;
+    }
+  }
+  .sidebar-toc:after {
+    display: none;
   }
   
   /* Force sticky header in smaller windows */
