--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.28
+@version     1.0.29
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -33,6 +33,7 @@ domain("wikifunctions.org") {
   .mw-header {
     margin: 0 !important; 
     padding-top: 0;
+    height: 50px !important;
   }
   
   /* Nudge sidebar-button up into corner */
@@ -89,7 +90,7 @@ domain("wikifunctions.org") {
   
   /* Remove the grid gutter */
   .vector-layout-grid .mw-page-container-inner {
-    grid-template: 50px min-content 1fr min-content / 220px 15px minmax(0,1fr);  
+    grid-template: 50px min-content 1fr min-content / 220px 15px minmax(0,1fr);
     grid-template-areas: 'header header header' 'sidebar gutter content' 'toc gutter content' 'footer footer footer'
   }
   
