--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.49
+@version     1.0.50
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -221,12 +221,11 @@ domain("wikifunctions.org") {
       display: flex;
     }
   }
-  /* Move button for ToC-collapsed down below the sticky-header */
+  /* Move button for ToC-collapsed down below the sticky-header, and add border */
   .vector-below-page-title #vector-toc-collapsed-button {
     top: 50px;
+    border: #447ff5 1px solid;
   }
-
-  
   /* Force ToC at smaller width         -- BROKEN
   @media screen and (min-width: 720px) {
     .sidebar-toc {
@@ -234,4 +233,16 @@ domain("wikifunctions.org") {
     }
   }  */
 
+  /* Force mw-header to be sticky */
+  .mw-header {
+    position: fixed; 
+    background: white; 
+    width: calc(100% - 40px);
+  }
+  #vector-sticky-header {
+    display: none;
+  }
+  .mw-table-of-contents-container.mw-sticky-header-element {
+    top: 60px !important;
+  }
 }
