--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.29
+@version     1.0.30
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -57,6 +57,12 @@ domain("wikifunctions.org") {
   }
   .sidebar-toc-contents {
     width: 12.5em
+  }
+  @media screen and (min-width: 1200px) {
+    .mw-sidebar, .sidebar-toc, .sidebar-toc::after {
+      width: 13.75em;
+      margin-left: 0.75em;
+    }
   }
   
   /* Sidebar tweaks */
