--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.32
+@version     1.0.33
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -29,21 +29,21 @@ domain("beta.wmflabs.org"),
 domain("wikifunctions.org") {
   /* NOTE: this assumes you are using NEW VECTOR ([[mw:Desktop Improvements]] beta) */
   
-  /* Remove header whitespace */
+/* Remove header whitespace */
   .mw-header {
     margin: 0 !important; 
     padding-top: 0;
-    height: 50px !important;
+    height: 55px !important;
   }
   
-  /* Nudge sidebar-button up into corner */
+/* Nudge sidebar-button up into corner */
   #mw-sidebar-button {
-    margin-left: -2px; 
-    margin-top: -10px; 
+    margin-left: -1px; 
+    margin-top: -11px; 
     border: none;
   }
   
-  /* ToC tweaks*/
+/* ToC tweaks*/
   .sidebar-toc {
     padding-left: 17px; 
     margin: 0 !important; 
@@ -65,7 +65,7 @@ domain("wikifunctions.org") {
     }
   }
   
-  /* Sidebar tweaks */
+/* Sidebar tweaks */
   #mw-panel {
     padding: 0; 
     width: 189px;
@@ -73,11 +73,11 @@ domain("wikifunctions.org") {
   }
   @media screen and (max-width: 999px) {
     .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container #mw-panel {
-      border: 1px black solid
+      border: 1px lightgray solid
     }
   }
   
-  /* Remove whitespace at edges */
+/* Remove whitespace at edges */
   .mw-page-container {
     padding: 1px;
   }
@@ -87,20 +87,19 @@ domain("wikifunctions.org") {
   .vector-sticky-header {
     padding: 0;
   }
-
   
-  /* Reduce gap above Page-title */
+/* Reduce gap above Page-title */
   .vector-layout-grid .mw-page-container-inner {
     row-gap: 0;
   }
   
-  /* Remove the grid gutter */
+/* Remove the grid gutter */
   .vector-layout-grid .mw-page-container-inner {
-    grid-template: 50px min-content 1fr min-content / 220px 15px minmax(0,1fr);
+    grid-template: 55px min-content 1fr min-content / 220px 15px minmax(0,1fr);
     grid-template-areas: 'header header header' 'sidebar gutter content' 'toc gutter content' 'footer footer footer'
   }
   
-  /* Shorten the inter-languages buttons */
+/* Shorten the inter-languages buttons */
   /* 1. Page-top button */
   #p-lang-btn-sticky-header {
     max-width: 71px; 
@@ -116,7 +115,7 @@ domain("wikifunctions.org") {
     overflow: clip;
   }
   
-  /* Remove empty space at page-bottom */
+/* Remove empty space at page-bottom */
   .mw-footer-container {
     padding-bottom: 0 !important;
   }
