--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.34
+@version     1.0.35
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -106,20 +106,22 @@ domain("wikifunctions.org") {
     grid-template-areas: 'header header header' 'sidebar gutter content' 'toc gutter content' 'footer footer footer'
   }
   
-/* Shorten the inter-languages buttons */
-  /* 1. Page-top button */
-  #p-lang-btn-sticky-header {
-    max-width: 71px; 
+/* Shorten the inter-languages buttons -- HACKISH! */
+  /* 1. Sticky-header button */
+  #p-lang-btn-sticky-header > span:not(.mw-ui-icon){
+    max-width: 30px; 
     overflow: clip; 
     margin-right: 25px;
+    max-height: 20px
   }
   #p-lang-btn-sticky-header::after {
     display: none;
   }
-  /* 2. Sticky-header button */
-  #p-lang-btn-label {
-    max-width: 100px !important; 
+  /* 2. Page-top button */
+  #p-lang-btn .vector-menu-heading-label{
+    max-width: 35px !important; 
     overflow: clip;
+    height: 25px
   }
   
 /* Remove empty space at page-bottom */
