--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.36
+@version     1.0.37
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -111,7 +111,13 @@ domain("wikifunctions.org") {
     grid-template: 55px min-content 1fr min-content / 220px 15px minmax(0,1fr);
     grid-template-areas: 'header header header' 'sidebar gutter content' 'toc gutter content' 'footer footer footer'
   }
-  
+
+/* Sidebar fix at smaller widths */
+  @media screen and (max-width: 999px) and (min-width:550px) {
+    .mw-checkbox-hack-checkbox:checked ~ .mw-content-container {
+      padding-left: 150px !important;
+    }
+  }
 /* Shorten the inter-languages buttons -- HACKISH! */
   /* 1. Sticky-header button */
   #p-lang-btn-sticky-header > span:not(.mw-ui-icon){
