--- a/new-vector-max-width.user.css
+++ b/new-vector-max-width.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 min/max-widths
 @namespace   StylishThemes
-@version     1.0.35
+@version     1.0.36
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-max-width.user.css
 @license     CC-BY-SA-4.0
@@ -59,6 +59,11 @@ domain("wikifunctions.org") {
     .mw-workspace-container {
       position: absolute;
       z-index: 4;
+    }
+  }
+  @media screen and (max-width: 999px) and (min-width:550px) {
+    #mw-sidebar-checkbox:checked ~ .mw-content-container {
+      padding-left: 184px;
     }
   }
   
