add notes on broken for later

--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.38
+@version     1.0.39
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -118,7 +118,19 @@ domain("wikifunctions.org") {
       padding-left: 150px !important;
     }
   }  
-  
+  /* Nudge it inwards, if site-sidebar is uncollapsed ?? */
+  /* BROKEN ?!??
+  @media screen and (max-width: 999px) and (min-width:550px) {
+    #mw-sidebar-checkbox:checked ~ .vector-below-page-title .sidebar-toc {
+      left: 155px !important;
+    }
+  }
+  @media screen and (max-width: 999px) and (min-width:550px) {
+    #mw-sidebar-checkbox:checked ~ #vector-toc-collapsed-button {
+      left: 155px !important;
+    }
+  }  
+  */
   
 /* Shorten the inter-languages buttons -- HACKISH! */
   /* 1. Sticky-header button */
