--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.57
+@version     1.0.58
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -256,32 +256,81 @@ domain("wikifunctions.org") {
       left: 1px
     }
   }
+   
+/* --------------------------------------------------------
+  BELOW CONTENT is all copied then adapted from 
+  https://userstyles.world/style/5789/wikipedia-fixed-top-and-sidebars
+*/
+/**
+    Reduces original sticky header to article links (talk, history, watch, edit).
+*/
+
+/* Force mw-header to be sticky, plus show the page-tool-sticky-buttons below */
+  .mw-header {
+    position: fixed; 
+    background: white; 
+    width: 100%;
+    top: 0;
+    left:0;
+  }
+  /* Nudge content down to account for no-default gap */
+  @media screen and (max-width: 999px) {
+    .mw-content-container {
+      padding-top: 55px;
+    }
+  }
+  /* move the new page-tool-sticky-header down, and limit size */
+  @media (min-width: 300px) {
+    #vector-sticky-header {
+    max-width: min-content;
+    top: 50px;
+    left: auto;
+    padding: 0 !important;
+    height: 40px;
+  }
+  }
+  /* reduce padding for the icons*/
+  .sticky-header-icon {
+    padding: 8px;
+    border: none;
+  }
+  /* remove extraneous buttons */
+  #p-lang-btn-sticky-header,
+  #p-personal-sticky-header,
+  #vector-sticky-header .vector-sticky-header-start {
+    display:none;
+  }
+  /* Fix for VE edit toolbar */
+  body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
+    top: 50px;
+  }
+  /* Fix for anchor navi */
+  html {
+    scroll-padding-top: 100px !important;
+  }
+  .oo-ui-windowManager-modal > .oo-ui-dialog.oo-ui-window-active {
+    top: 100px;
+  }
   
-/* Force ToC at smaller width   -- BROKEN
+  
+/* Try to fix layering of User-tools popup menu with sticky page-tools */
+  /* BROKEN ?????
+  .vector-menu-content, .vector-menu-content-list, .vector-user-links, .vector-user-menu, .mw-list-item {
+  
+    z-index:6 !important;
+  } 
+  */
+  
+  
+/* OLDER TESTS and IDEAS BELOW */
+
+  
+  /* Force ToC at smaller width   -- BROKEN
   @media screen and (min-width: 500px) {
     .sidebar-toc {
       display: block !important;
       position: absolute
     }
   }  
-  */
-  
-  
-/* Force mw-header to be sticky -- REMOVE FOR NOW - COMPLEXITIES ABOUND!
-  .mw-header {
-    position: fixed; 
-    background: white; 
-    width: calc(100% - 40px);
-  }
-  */
-  /* Force Main Menu to show when scrolled  
-  @media screen and (max-width: 999px) {
-    .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container #mw-panel {
-      margin-top: 50px;
-      position: fixed;
-      z-index: 4;
-      border: 1px lightgray solid
-    }
-  } 
   */
 }
