--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.42
+@version     1.0.43
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -110,6 +110,30 @@ domain("wikifunctions.org") {
   .vector-layout-grid .mw-page-container-inner {
     grid-template: 55px min-content 1fr min-content / 220px 15px minmax(0,1fr);
     grid-template-areas: 'header header header' 'sidebar gutter content' 'toc gutter content' 'footer footer footer'
+  }
+  
+/* Reduce article-toolbar height */
+  .vector-menu-tabs .mw-list-item > a, .mw-article-toolbar-container .vector-menu-dropdown > a, .vector-menu-tabs .mw-list-item .vector-menu-heading, .mw-article-toolbar-container .vector-menu-dropdown .vector-menu-heading {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .vector-article-toolbar {
+    max-height: 35px
+  }
+  .mw-article-toolbar-container {
+    border-bottom: none;
+  }
+  #right-navigation .vector-menu-content {
+    max-height: 25px
+  }
+  .skin-vector-2022 #coordinates {
+    top: -1.4em;
+  }
+  #contentSub {
+    height: 1px !important
+  }
+  #mw-content-text {
+    margin-top: -10px
   }
 
 /* Nudge the Content and ToC inwards, if site-sidebar is uncollapsed 
