ah, that's for redirects/etc

--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.43
+@version     1.0.44
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -118,22 +118,22 @@ domain("wikifunctions.org") {
     padding-bottom: 5px;
   }
   .vector-article-toolbar {
-    max-height: 35px
+    max-height: 35px;
   }
   .mw-article-toolbar-container {
     border-bottom: none;
   }
   #right-navigation .vector-menu-content {
-    max-height: 25px
+    max-height: 25px;
   }
   .skin-vector-2022 #coordinates {
     top: -1.4em;
   }
   #contentSub {
-    height: 1px !important
+    height: 10px;
   }
   #mw-content-text {
-    margin-top: -10px
+    margin-top: -10px;
   }
 
 /* Nudge the Content and ToC inwards, if site-sidebar is uncollapsed 
